[package]
name = "chasa"
version = "0.1.5"
authors = ["Conashimi Momota <momota.ry2@gmail.com>"]
description = "A parser combinator that can be chained after case separation"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "1.6.1"
ranges = "0.3"