[package]
name = "chasa"
version = "0.4.0"
edition = "2024"
rust-version = "1.85"
authors = ["Conashimi Momota <momota.ry2@gmail.com>"]
description = "A parser combinator focused on rollback/commit, streaming inputs, and composable method chains."
license = "MIT OR Apache-2.0"
repository = "https://github.com/momota1029/chasa"
documentation = "https://docs.rs/chasa"
readme = "README.md"
keywords = ["parser", "parser-combinator", "parsing"]

[dependencies]
reborrow-generic = { version = "0.1.1", path = "../reborrow-generic", features = ["derive"] }
copy-range = "0.1.1"
